# test-dirt

./: .gitignore  Cargo.toml  README.md  bpftool_7.6.0+6.14.0-22.22_amd64.deb
combined/dirt/dirt-common/: Cargo.toml
combined/dirt/dirt-common/src/: lib.rs
combined/dirt/dirt-ebpf/src/: constants.rs  main.rs
combined/dirt/dirt/src/: main.rs
combined/dirt1/: Cargo.toml  README.md
combined/dirt1/dirt1/: Cargo.toml  build.rs
combined/dirt1/dirt1-common/: Cargo.toml
combined/dirt1/dirt1-ebpf/: Cargo.toml
combined/dirt1/dirt1-ebpf/src/: main.rs
combined/dirt1/dirt1/src/: main.rs
combined/dirt2/: Cargo.toml  README.md
combined/dirt2/dirt2/: Cargo.toml  build.rs
combined/dirt2/dirt2-common/: Cargo.toml
combined/dirt2/dirt2-ebpf/: Cargo.toml
combined/dirt2/dirt2-ebpf/src/: main.rs
combined/dirt2/dirt2/src/: main.rs
combined/dirt3/: Cargo.toml  README.md
combined/dirt3/dirt3/: Cargo.toml  build.rs
combined/dirt3/dirt3-common/: Cargo.toml
combined/dirt3/dirt3-ebpf/: Cargo.toml
combined/dirt3/dirt3-ebpf/src/: main.rs
combined/dirt3/dirt3/src/: main.rs
combined/dirt3a/: Cargo.toml  README.md
combined/dirt3a/dirt3a/: Cargo.toml  build.rs
combined/dirt3a/dirt3a-common/: Cargo.toml
combined/dirt3a/dirt3a-ebpf/: Cargo.toml
combined/dirt3a/dirt3a-ebpf/src/: main.rs
combined/dirt3a/dirt3a/src/: main.rs
combined/dirt4/: Cargo.toml  README.md
combined/dirt4/dirt4/: Cargo.toml  build.rs
combined/dirt4/dirt4-common/: Cargo.toml
combined/dirt4/dirt4-ebpf/: Cargo.toml
combined/dirt4/dirt4-ebpf/src/: main.rs
combined/dirt4/dirt4/src/: main.rs
combined/dirt5/: Cargo.toml  README.md
combined/dirt5/dirt5/: Cargo.toml  build.rs
combined/dirt5/dirt5-common/: Cargo.toml
combined/dirt5/dirt5-ebpf/: Cargo.toml
combined/dirt5/dirt5-ebpf/src/: main.rs
combined/dirt5/dirt5/src/: main.rs
combined/dirt6/: Cargo.toml  README.md
combined/dirt6/dirt6/: Cargo.toml  build.rs
combined/dirt6/dirt6-common/: Cargo.toml
combined/dirt6/dirt6-ebpf/: Cargo.toml
combined/dirt6/dirt6-ebpf/src/: main.rs
combined/dirt6/dirt6/src/: main.rs
combined/dirt7/: Cargo.toml  README.md
combined/dirt7/dirt7/: Cargo.toml  build.rs
combined/dirt7/dirt7-common/: Cargo.toml
combined/dirt7/dirt7-ebpf/: Cargo.toml
combined/dirt7/dirt7-ebpf/src/: main.rs
combined/dirt7/dirt7/src/: main.rs
combined/dirt_merged/: Cargo.toml  README.md
combined/dirt_merged/dirt_merged/: Cargo.toml  build.rs
combined/dirt_merged/dirt_merged-common/: Cargo.toml
combined/dirt_merged/dirt_merged-ebpf/: Cargo.toml
combined/dirt_merged/dirt_merged-ebpf/src/: main.rs
combined/dirt_merged/dirt_merged/src/: main.rs
dirt/: Cargo.toml  build.rs
dirt-common/: Cargo.toml
dirt-common/src/: constants.rs  lib.rs
dirt-ebpf/: Cargo.toml  build.rs
dirt-ebpf/src/: main.rs  vmlinux.rs
dirt/dirt/: Cargo.toml  build.rs
dirt/dirt-common/: Cargo.toml
dirt/dirt-common/src/: constants.rs  lib.rs
dirt/dirt-ebpf/: Cargo.toml  build.rs
dirt/dirt-ebpf/src/: lib.rs  main.rs
dirt/dirt/src/: main.rs
dirt/src/: main.rs
