[package]
name = "dirt-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
dirt-common = { path = "../dirt-common" }

aya-ebpf = { workspace = true } # Removed alloc feature, as 0.1.1 doesn't have it
# aya-ebpf-bindings = { workspace = true } # Removed direct dependency again
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "dirt"
path = "src/main.rs"
