[workspace]
resolver = "2" # Enable new feature resolver
members = [
    "dirt",         # Path to the user-space application crate (e.g., directory ./dirt/)
    "dirt-common",  # Path to the common library crate (e.g., directory ./dirt-common/)
    "dirt-ebpf",    # Path to the eBPF crate (e.g., directory ./dirt-ebpf/)
]

# Shared package metadata for all workspace members
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Dual MIT/GPL" # Define the license here
authors = ["Your Name <you@example.com>"] # Placeholder, should be updated
# repository = "..." # Optional: Add repo URL
# description = "..." # Optional: Add description

# Shared dependencies for all workspace members
[workspace.dependencies]
anyhow = "1.0"
 aya = { git = "https://github.com/aya-rs/aya", package = "aya", features = ["async_tokio"] }
 aya-log = { git = "https://github.com/aya-rs/aya", package = "aya-log" }
 aya-ebpf = { git = "https://github.com/aya-rs/aya", package = "aya-ebpf", features = ["btf"] }
 aya-log-ebpf = { git = "https://github.com/aya-rs/aya", package = "aya-log-ebpf" }
 aya-bpf = { git = "https://github.com/aya-rs/aya", package = "aya-bpf" } # async_tokio feature will be specified in dirt-common's manifest
 aya-build = "0.2" # This was already present and seems fine as is (not from aya.git)

clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
daemonize = "0.5"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }

# Profiles moved from dirt-ebpf/Cargo.toml
[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
