[package]
name = "dirt-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
# repository.workspace = true # Optional
# description.workspace = true # Optional
publish = false # This crate-specific setting is preserved

[dependencies]
# Inherit from workspace, but specify needed features locally if not default in workspace
aya-bpf = { workspace = true, features = ["async_tokio"] }

[lib]
path = "src/lib.rs" # Standard library path definition
