[package]
name = "dirt-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
# repository.workspace = true # Optional
# description.workspace = true # Optional
publish = false # This crate-specific setting is preserved

[dependencies]
# Inherit from workspace. Features like 'btf' are on the workspace definition of aya-ebpf.
aya-ebpf = { workspace = true }

[features]
default = []
user = [] # Defines the 'user' feature

[lib]
path = "src/lib.rs" # Standard library path definition
