[package]
name = "dirt-ebpf"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
# repository.workspace = true # Optional
# description.workspace = true # Optional
publish = false # This crate-specific setting is preserved

[dependencies]
# Inherit from workspace
aya-ebpf = { workspace = true } # btf feature is specific here
aya-log-ebpf.workspace = true

# Path dependency to local common library
dirt-common = { path = "../dirt-common" }

[[bin]]
name = "dirt-ebpf-probe" # New unique name for the eBPF binary
path = "src/main.rs"

# No [workspace] section here; this is a member crate.
# Profiles have been moved to the workspace root.
