[package]
name = "dirt-ebpf"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
# repository.workspace = true # Optional
# description.workspace = true # Optional
publish = false # This crate-specific setting is preserved

[dependencies]
# Inherit from workspace
aya-ebpf = { workspace = true, features = ["btf"] } # Ensure btf feature is enabled
aya-log-ebpf.workspace = true

# Path dependency to local common library
dirt-common = { path = "../dirt-common" }

[[bin]]
name = "dirt-ebpf-probe" # This is already correct
path = "src/main.rs"

# No [workspace] section here; this is a member crate.
# Profiles have been moved to the workspace root.
