[package]
name = "dirt" # This crate is also named 'dirt', matching the directory and member name
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
# repository.workspace = true # Optional, if defined in workspace
# description.workspace = true # Optional, if defined in workspace

[dependencies]
# Path dependency to local common library
dirt-common = { path = "../dirt-common", features = ["user"] }

# Dependencies inherited from workspace
anyhow.workspace = true
aya.workspace = true
aya-log.workspace = true
clap = { workspace = true, features = ["derive"] } # Ensure clap is listed
chrono = { workspace = true, features = ["serde"] } # Ensure chrono is listed
daemonize.workspace = true # Ensure daemonize is listed
env_logger.workspace = true
libc.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] } # Ensure serde is listed
serde_json.workspace = true # Ensure serde_json is listed
tokio = { workspace = true, features = [ # Ensure features are listed if not inherited by default by workspace def
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }


[build-dependencies]
# Inherited build dependencies
anyhow.workspace = true
aya-build.workspace = true # Assuming aya-build is in workspace.dependencies

# Path dependency to local eBPF crate
# The comment about artifact dependency is preserved.
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependecy so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
dirt-ebpf = { path = "../dirt-ebpf" } # This is a local path dependency

[[bin]]
name = "dirt"
path = "src/main.rs"
