[package]
name = "dirt-common"
version = "0.1.0"
edition = "2021"

license.workspace = true

[features]
default = []
user = ["aya"]

[dependencies]
aya = { workspace = true, optional = true }
aya-ebpf = { workspace = true, default-features = false, optional = true } # Added aya-ebpf

[lib]
path = "src/lib.rs"
