[package]
name = "dirt_merged-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
dirt_merged-common = { path = "../dirt_merged-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "dirt_merged"
path = "src/main.rs"
